actor-apps/app-web/src/styles/sidebar.scss
.sidebar {
  position: relative;

  overflow: visible;

  width: $sidebar-width;
  height: 100%;

  color: $sidebar-text-color;
  background-color: $dusky-blue;

  &__header {
    user-select: none;
    transition: background $default-transition-duration $default-transition-timing;
    &__user {
      height: $sidebar-header-height;
      padding: 2px 14px;

      .avatar {
        margin: 16px 10px 16px 0;
      }

      &__name {
        font-size: 16px;
        font-weight: 500;
        line-height: 32px;

        overflow-x: hidden;

        margin: 14px 0;

        vertical-align: middle;
        text-overflow: ellipsis;

        color: white;
      }
      .dropdown__button {
        width: 24px;
        height: 24px;
        margin: 18px 0;

        transition: transform $default-transition-duration $default-transition-timing;
        vertical-align: middle;

        color: rgba(255,255,255,.65);
      }
    }

    .dropdown--opened {
      .dropdown__button {
        transition: transform $default-transition-duration $default-transition-timing;

        background-color: transparent !important;
        box-shadow: none !important;
      }
    }
    .dropdown__menu {
      min-width: 230px;
      margin-top: 15px;
      margin-right: -30px;
    }

    &:hover {
      //background-color: rgba($baby-blue,.2);
      background-color: rgba($baby-blue,.12);
    }
    &--clickable {
      cursor: pointer;
    }
    &--opened {
      background-color: rgba($baby-blue,.2) !important;
      .dropdown__button {
        transform: scale(1, -1);

        color: white;

        backface-visibility: hidden;
      }
    }
  }

  &__tabs {
    position: absolute;
    top: $toolbar-height;
    right: 0;
    bottom: 0;
    left: 0;
    .tabs-menu {
      height: $sidebar-tabs-height;
      margin: 0;
      padding: 0;

      list-style: none;

      background-color: $sidebar-header-hover-color;
      .tabs-menu-item {
        float: left;

        width: 50%;
        margin: 0;
        padding: 0;
        a {
          font-size: 14px;
          font-weight: 500;
          line-height: $sidebar-tabs-height;

          display: block;

          cursor: pointer;
          text-align: center;
          text-decoration: none;
          text-transform: uppercase;

          color: rgba(255,255,255,.75);
          &:hover {
            color: white;
          }
        }
        &.is-active {
          box-shadow: inset 0 -2px 0 0 white;
          a {
            color: white;
          }
        }
      }
    }

    &__tab-items {
      & > div {
        text-transform: uppercase;
      }
    }
    &__tab-content {
      position: absolute;
      top: 48px;
      bottom: 0;

      width: 100%;
      & > div {
        position: absolute !important;
        top: 0;
        right: 0;
        bottom: 0;
        left: 0;
      }
    }
  }

  &__list {
    font-weight: 500;
    line-height: 24px;

    overflow: auto;

    margin: 0;
    padding: 0;

    list-style: none;
    &__title {
      font-size: 15px;
      font-weight: 500;

      padding-left: 16px;

      text-transform: uppercase;
    }
    &__item {
      font-size: 15px;

      padding: 7px 14px;

      cursor: pointer;
      transition: color $default-transition-duration $default-transition-timing;

      color: rgba(white, .6);
      .avatar {
        margin: 0 10px 0 0;

        transition: filter $default-transition-duration $default-transition-timing;
        vertical-align: top;

        filter: saturate(.4) contrast(.6);
      }
      .title {
        overflow: hidden;

        white-space: nowrap;
        text-overflow: ellipsis;
      }
      .counter {
        font-size: 14px;
        font-weight: 500;
        line-height: 24px;

        display: inline-block;

        box-sizing: border-box;
        min-width: 24px;
        height: 24px;
        margin: 0 0 0 2px;
        padding: 0 4px;

        text-align: center;

        color: white;
        border-radius: 12px;
        background-color: $coral;
      }
      &:hover {
        color: white;
        background-color: rgba($baby-blue,.12);
        box-shadow: none;
        .avatar {
          filter: none;
        }
      }
      &--active {
        color: white;
        background-color: $dark-sky-blue !important;
        .avatar {
          filter: none;
        }
      }
      &--unread {
        opacity: 1;
        color: white;
        .avatar {
          filter: none;
        }
      }
    }

    &--recent {
      position: absolute;
      top: $toolbar-height;
      right: 0;
      bottom: 64px;
      left: 0;
    }
    &--contacts {
      position: absolute;
      top: 0;
      right: 0;
      bottom: 64px;
      left: 0;
      .title {
        line-height: 32px;
      }
    }
  }

  footer {
    position: absolute;
    bottom: 0;

    box-sizing: border-box;
    width: 100%;
    padding: 14px;
    .button {
      i {
        margin-top: -4px;
      }
    }
  }
}

